# tree-sitter-testplan

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-testplan.pc.in
bindings/c/tree_sitter/: tree-sitter-testplan.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_testplan/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTestplanTests/: TreeSitterTestplanTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
tests/: testplan.txt
